project( StereoMatchBM )
find_package( OpenCV REQUIRED )
find_package( opencvblobslib REQUIRED )
add_executable( stereo_matchBM stereo_matchBM.cpp )
target_link_libraries( stereo_matchBM ${OpenCV_LIBS} ${OPENCVBLOBSLIB_LIBRARIES} SCalibData )
add_executable( stereo_test_bm stereo_test.cpp )
target_link_libraries( stereo_test_bm ${OpenCV_LIBS} ${OPENCVBLOBSLIB_LIBRARIES} SCalibData )
add_executable( stereo_test_blobs stereo_test_blobs.cpp )
target_link_libraries( stereo_test_blobs ${OpenCV_LIBS} ${OPENCVBLOBSLIB_LIBRARIES} SCalibData )
