project( StereoMatchBMThreads )
find_package( OpenCV REQUIRED )
find_package( opencvblobslib REQUIRED )
find_package( OpenMP REQUIRED)
if( OPENMP_FOUND )
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()
add_executable( stereo_matchBM_threads stereo_matchBM_threads.cpp )
target_link_libraries( stereo_matchBM_threads ${OpenCV_LIBS} ${OPENCVBLOBSLIB_LIBRARIES} SCalibData )
add_executable( stereo_matchBM_threads_test_nocap stereo_matchBM_threads_test_nocap.cpp )
target_link_libraries( stereo_matchBM_threads_test_nocap ${OpenCV_LIBS} ${OPENCVBLOBSLIB_LIBRARIES} SCalibData )
