project( StereoMatchSGBM )
find_package( OpenCV REQUIRED )
find_package( opencvblobslib REQUIRED )
add_executable( stereo_matchSGBM stereo_matchSGBM.cpp )
target_link_libraries( stereo_matchSGBM ${OpenCV_LIBS} ${OPENCVBLOBSLIB_LIBRARIES} SCalibData )
add_executable( stereo_test_sgbm stereo_test_sgbm.cpp )
target_link_libraries( stereo_test_sgbm ${OpenCV_LIBS} ${OPENCVBLOBSLIB_LIBRARIES} SCalibData )
